--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -17,11 +17,16 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  min-height: 100vh;
+  color: #f5f5f5;
+  background-color: #30475e;
+}
+
+.np-effect {
+  background: #30475e;
+  box-shadow: 9px 9px 18px #293c50, -9px -9px 18px #37526c;
+}
+
+.np-btn {
+  box-shadow: 6px 6px 12px #293c50, -6px -6px 12px #37526c;
 }
